Bug 530866 - Move away of deprecated Number constructors
Changed core.tests.resources formatter profile to a known one to prevent
endless lines too.

Change-Id: I142d9ab0257b98642b2576a9f0c092e985178eb1
Signed-off-by: Alexander Kurtakov <akurtako@redhat.com>